# FastTIFF

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish-lib.yml  release-arch.yml  release.yml
FastTIFF/: Cargo.toml  build.rs
FastTIFF/icon/: generate-icons.bat  generate-icons.ps1  png2ico.bat
FastTIFF/packaging/: fasttiff.desktop
FastTIFF/packaging/arch/: PKGBUILD
FastTIFF/packaging/deb/: postinst  postrm
FastTIFF/scripts/: gen_colormaps.py  gen_sample_tiff.py
FastTIFF/src/: app.rs  colormap.rs  macos_open.rs  macos_open_tests.rs  main.rs  prefetch.rs  process.rs  volume.rs
FastTIFF/src/app/: camera.rs  channels.rs  dimensions.rs  gpu_sync.rs  tests.rs  widgets.rs  windows.rs
FastTIFF/src/render/: callback.rs  glow_backend.rs  mod.rs  pipeline.rs  wgpu_backend.rs  wgsl_tests.rs
FastTIFF/src/shaders/: composite.wgsl  volume.wgsl
fast-tiff-lib/: Cargo.toml  README.md
fast-tiff-lib/bench/: .gitignore  Cargo.toml  README.md  bench_results.csv  build.rs  plot_results.py  plot_sweep.py  sweep_results.csv
fast-tiff-lib/bench/src/: ffi.rs  main.rs
fast-tiff-lib/src/: decode.rs  decode_tests.rs  encode.rs  encode_tests.rs  ifd.rs  ij_metadata.rs  ij_metadata_tests.rs  index.rs  lib.rs
fast-tiff-lib/src/metadata/: imagej.rs  imagej_tests.rs  mod.rs  mod_tests.rs  ome.rs  ome_tests.rs
fast-tiff-lib/tests/: imagej_contiguous.rs  libtiff_fixtures.rs  synthetic_tiff.rs  write_roundtrip.rs
fast-tiff-lib/tests/fixtures/: err_u16_spp1_p1_tiled.tif  generate_fixtures.py  ij_u16_spp1_p6_hyperstack.tif  pil_u16_spp1_p1_lzw.tif  pil_u8_spp1_p1_lzw.tif  pil_u8_spp1_p1_pb.tif  pil_u8_spp3_p1_zip.tif  tff_f32_spp1_p2_lzw-pred3.tif  tff_f32_spp1_p2_none-le.tif  tff_f32_spp1_p2_zip-pred3-be.tif  tff_f32_spp1_p2_zip-pred3.tif  tff_i16_spp1_p2_lzw-pred2.tif  tff_i16_spp1_p2_none-be.tif  tff_i16_spp1_p2_none-le.tif  tff_i32_spp1_p2_none-le.tif  tff_i8_spp1_p2_none-le.tif  tff_u16_spp1_p2_lzw-pred2-be.tif  tff_u16_spp1_p2_lzw-pred2-rps4.tif  tff_u16_spp1_p2_lzw-rps4.tif  tff_u16_spp1_p2_none-be.tif  tff_u16_spp1_p2_none-le.tif  tff_u16_spp1_p2_pb-rps4.tif  tff_u16_spp1_p2_zip-pred2.tif  tff_u16_spp1_p2_zip-rps4.tif  tff_u16_spp3_p2_zip-pred2.tif  tff_u32_spp1_p2_none-le.tif  tff_u32_spp1_p2_zip-pred2.tif  tff_u8_spp1_p2_none-le.tif  tff_u8_spp1_p2_zip-pred2.tif  tff_u8_spp3_p2_lzw-pred2.tif  tff_u8_spp3_p2_none.tif
packaging/arch/: PKGBUILD
tiff_core/: Cargo.toml  README.md
tiff_core/src/: decode.rs  decode_tests.rs  ifd.rs  ij_metadata.rs  ij_metadata_tests.rs  index.rs  lib.rs
tiff_core/tests/: synthetic_tiff.rs
