[package]
name = "FastTIFF"
version = "1.6.1"
edition = "2021"
description = "A lightning-fast multi-frame TIFF viewer with ImageJ-compatible rendering."
license = "GPL-3.0-only"

# Exactly one GPU renderer is compiled in, chosen by these features. glow
# (OpenGL) is the default: it avoids a Windows 10 idle-CPU spin that the wgpu
# backend triggers on some machines, and works on Windows/Linux/macOS today.
# Build the wgpu variant with:
#     cargo build --no-default-features --features renderer-wgpu
# (wgpu = DX12/Vulkan/Metal — preferable on macOS, where OpenGL is deprecated).
# Each feature turns on the matching eframe backend, so the *unused* renderer's
# entire dependency subtree is excluded from the build (verify: `cargo tree`).
[features]
default = ["renderer-glow"]
renderer-glow = ["eframe/glow"]
renderer-wgpu = ["eframe/wgpu"]

[dependencies]
fast-tiff-lib = { path = "../fast-tiff-lib" }
# eframe with default features off: drops the active accesskit integration
# (`accesskit_winit`/`_windows`/`_consumer` — Windows UI Automation pumped from
# the event loop, unused here) and leaves the GPU backend unset so the
# `renderer-*` features above pick exactly one. `default_fonts` keeps the
# bundled text fonts. (egui still pulls the passive `accesskit` data-types crate
# as an unavoidable core dependency.)
eframe = { version = "0.34", default-features = false, features = ["default_fonts"] }
egui = "0.34"
egui_extras = "0.34"
bytemuck = "1.25"
anyhow = "1.0"
rfd = "0.17"
log = "0.4"
env_logger = "0.11"

# Only needed on Windows, where build.rs embeds the icon + version metadata
# as a Win32 resource. Gated so non-Windows builds don't pull winres in.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# Only needed on Linux. Linux windowing backends for winit. Cargo unions these with the eframe
# features above; target-gating keeps X11/Wayland out of Windows/macOS builds.
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["x11", "wayland"] }

[package.metadata.winres]
OriginalFilename = "FastTIFF"
LegalCopyright = "konung_yaropolk © 2026"
FileDescription = "Fast TIFF Viewer"
ProductName = "Fast TIFF Viewer"

# `cargo deb` packaging, used by the Linux .deb job in
# .github/workflows/release.yml. `depends = "$auto"` lets cargo-deb compute the
# shared-library runtime deps straight from the built binary (dpkg-shlibdeps),
# so the GTK/OpenGL/X11/Wayland libs the glow GUI links are filled in for us.
# Add an email to `maintainer` (e.g. "konung_yaropolk <you@example.com>") for a
# lintian-clean package; a bare name builds fine but is warned about.
[package.metadata.deb]
maintainer = "konung_yaropolk"
section = "graphics"
priority = "optional"
depends = "$auto"
# postinst/postrm add and remove the lowercase `fasttiff` -> `FastTIFF` symlink
# in /usr/bin (a symlink we create there isn't a tracked package file).
maintainer-scripts = "packaging/deb"
# Listing assets disables cargo-deb's automatic binary inclusion, so the binary
# is listed here too. Paths are relative to this manifest dir; the workspace
# `target/` is resolved automatically. The .desktop entry + hicolor icons give
# the app a menu launcher (dpkg refreshes the icon/desktop caches on install).
assets = [
    ["target/release/FastTIFF", "usr/bin/FastTIFF", "755"],
    ["packaging/fasttiff.desktop", "usr/share/applications/fasttiff.desktop", "644"],
    ["icon/icon16.png", "usr/share/icons/hicolor/16x16/apps/fasttiff.png", "644"],
    ["icon/icon32.png", "usr/share/icons/hicolor/32x32/apps/fasttiff.png", "644"],
    ["icon/icon48.png", "usr/share/icons/hicolor/48x48/apps/fasttiff.png", "644"],
]
