[package]
name = "FastTIFF"
version = "1.7.5"
edition = "2021"
description = "A lightning-fast multi-frame TIFF viewer with ImageJ-compatible rendering."
license = "GPL-3.0-only"

# Exactly one GPU renderer is compiled in, chosen by these features. wgpu
# (DX12/Vulkan/Metal) is the default — preferred on macOS (where OpenGL is
# deprecated) and the more actively developed backend. Build the glow (OpenGL)
# variant with:
#     cargo build --no-default-features --features renderer-glow
# glow is the portable fallback: it links only OpenGL (near-universal on
# Linux), and avoids a Windows 10 idle-CPU spin that wgpu triggers on some
# machines. Each feature turns on the matching eframe backend, so the *unused*
# renderer's entire dependency subtree is excluded from the build (`cargo tree`).
[features]
default = ["renderer-wgpu"]
# `half` (f32 -> f16) is only used by the wgpu volume path (16-bit volume
# textures); it's already in the tree via wgpu, so this adds nothing.
renderer-wgpu = ["eframe/wgpu", "dep:half"]
renderer-glow = ["eframe/glow"]

[dependencies]
fast-tiff-lib = { path = "../fast-tiff-lib" }
# eframe with default features off: drops the active accesskit integration
# (`accesskit_winit`/`_windows`/`_consumer` — Windows UI Automation pumped from
# the event loop, unused here) and leaves the GPU backend unset so the
# `renderer-*` features above pick exactly one. `default_fonts` keeps the
# bundled text fonts. (egui still pulls the passive `accesskit` data-types crate
# as an unavoidable core dependency.)
eframe = { version = "0.34", default-features = false, features = ["default_fonts"] }
egui = "0.34"
egui_extras = "0.34"
bytemuck = "1.25"
# Parallel-across-slices 3D volume assembly (already in the tree via fast-tiff-lib).
rayon = "1.10"
# f32 -> f16 for the wgpu volume textures (R16Float); wgpu-only, so optional.
half = { version = "2", optional = true }
anyhow = "1.0"
rfd = "0.17"
log = "0.4"
env_logger = "0.11"

# WGSL shaders are only validated by wgpu at runtime (shader-module creation),
# so this lets `cargo test` catch shader errors offline (no GPU needed). naga is
# already in the tree via wgpu; the test is gated to the wgpu feature.
[dev-dependencies]
naga = { version = "29", features = ["wgsl-in"] }

# Only needed on Windows, where build.rs embeds the icon + version metadata
# as a Win32 resource. Gated so non-Windows builds don't pull winres in.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# Only needed on Linux. Linux windowing backends for winit. Cargo unions these with the eframe
# features above; target-gating keeps X11/Wayland out of Windows/macOS builds.
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["x11", "wayland"] }

# Decodes the bundled PNG into RGBA for the window icon (see `window_icon` in
# main.rs). Excluded on macOS, where winit ignores per-window icons (the Dock
# icon comes from the .app bundle's .icns) — so nothing there references `image`.
# The png codec is already in the tree via eframe/arboard, so this compiles no
# new crates on the platforms that do use it.
[target.'cfg(not(target_os = "macos"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[package.metadata.winres]
OriginalFilename = "FastTIFF"
LegalCopyright = "konung_yaropolk © 2026"
FileDescription = "Fast TIFF Viewer"
ProductName = "Fast TIFF Viewer"

# `cargo deb` packaging, used by the Linux .deb job in
# .github/workflows/release.yml. `depends = "$auto"` lets cargo-deb compute the
# shared-library runtime deps straight from the built binary (dpkg-shlibdeps),
# so the GTK/OpenGL/X11/Wayland libs the glow GUI links are filled in for us.
# Add an email to `maintainer` (e.g. "konung_yaropolk <you@example.com>") for a
# lintian-clean package; a bare name builds fine but is warned about.
[package.metadata.deb]
maintainer = "konung_yaropolk"
section = "graphics"
priority = "optional"
depends = "$auto"
# postinst/postrm add and remove the lowercase `fasttiff` -> `FastTIFF` symlink
# in /usr/bin (a symlink we create there isn't a tracked package file).
maintainer-scripts = "packaging/deb"
# Listing assets disables cargo-deb's automatic binary inclusion, so the binary
# is listed here too. Paths are relative to this manifest dir; the workspace
# `target/` is resolved automatically. The .desktop entry + hicolor icons give
# the app a menu launcher (dpkg refreshes the icon/desktop caches on install).
assets = [
    ["target/release/FastTIFF", "usr/bin/FastTIFF", "755"],
    ["packaging/fasttiff.desktop", "usr/share/applications/fasttiff.desktop", "644"],
    ["icon/icon16.png", "usr/share/icons/hicolor/16x16/apps/fasttiff.png", "644"],
    ["icon/icon32.png", "usr/share/icons/hicolor/32x32/apps/fasttiff.png", "644"],
    ["icon/icon48.png", "usr/share/icons/hicolor/48x48/apps/fasttiff.png", "644"],
    ["icon/icon64.png", "usr/share/icons/hicolor/64x64/apps/fasttiff.png", "644"],
    ["icon/icon128.png", "usr/share/icons/hicolor/128x128/apps/fasttiff.png", "644"],
    ["icon/icon256.png", "usr/share/icons/hicolor/256x256/apps/fasttiff.png", "644"],
]