[package]
name = "fast-tiff-lib"
version = "0.4.3"
edition = "2021"
description = "Lazy, memory-mapped reader for single and multi-frame TIFF files: IFD indexing, ImageJ metadata/LUT parsing, and per-frame strip decoding."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/konung-yaropolk/FastTIFF"
keywords = ["tiff", "imagej", "science", "microscopy", "astronomy"]
categories = ["visualization", "multimedia::images", "parser-implementations", "science"]

[dependencies]
memmap2 = "0.9"
weezl = "0.2"      # LZW decoder (compression = 5)
flate2 = "1.1"     # Deflate/Zip decoder (compression = 8 / 32946)
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["extern_crate_alloc"] }
rayon = "1.10"     # data-parallel strip decompression + 32-bit conversion

[dev-dependencies]
